[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-litterman-improved"
version = "0.1.0"
description = "Enhanced Black-Litterman portfolio optimization with ML, LLM, and qualitative views"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GPPanos", email = "gppanos@example.com"}
]
requires-python = ">=3.9"
keywords = ["finance", "portfolio-optimization", "black-litterman", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
torch = ["torch>=1.10.0"]
llm = ["langchain>=0.1.0", "openai>=1.0.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0", "black", "ruff"]
docs = ["mkdocs>=1.4", "mkdocs-material>=9.0", "mkdocstrings[python]"]

[project.urls]
"Homepage" = "https://github.com/GPPanos/black-litterman-improved"
"Documentation" = "https://black-litterman-improved.readthedocs.io"
"Repository" = "https://github.com/GPPanos/black-litterman-improved.git"
"Issues" = "https://github.com/GPPanos/black-litterman-improved/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["black_litterman_improved*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=black_litterman_improved --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]
